--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,39 +1,20 @@
-<!-- 
+
 <table>
   <tr>
     <th>Company</th>
     <th>Contact</th>
-    <th>Country</th>
+    <th>Action</th>
   </tr>
   <tr>
     <td>Alfreds Futterkiste</td>
     <td>Maria Anders</td>
-    <td>Germany</td>
+    <td class='action'>
+    <mat-icon >edit</mat-icon>
+    <mat-icon >delete</mat-icon>
+    </td>
+    
   </tr>
-  <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
-  </tr>
-  <tr>
-    <td>Ernst Handel</td>
-    <td>Roland Mendel</td>
-    <td>Austria</td>
-  </tr>
-  <tr>
-    <td>Island Trading</td>
-    <td>Helen Bennett</td>
-    <td>UK</td>
-  </tr>
-  <tr>
-    <td>Laughing Bacchus Winecellars</td>
-    <td>Yoshi Tannamuri</td>
-    <td>Canada</td>
-  </tr>
-  <tr>
-    <td>Magazzini Alimentari Riuniti</td>
-    <td>Giovanni Rovelli</td>
-    <td>Italy</td>
-  </tr>
-</table> -->
-	<router-outlet></router-outlet>
+
+
+</table> 
+	<!-- <router-outlet></router-outlet> -->
