--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,38 @@
-
 <table>
-  <tr>
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Action</th>
-  </tr>
-  <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td class='action'>
-    <mat-icon >edit</mat-icon>
-    <mat-icon >delete</mat-icon>
-    </td>
-    
-  </tr>
+	<tr>
+		<th class = "header">
+      <div>
+        	No
+      </div>
+		
+			<div class ="header-action">
+				<mat-icon>arrow_drop_up</mat-icon>
+				<mat-icon>arrow_drop_down</mat-icon>
+			</div>
 
+		</th>
+		<th>Company</th>
+		<th>Contact</th>
+		<th>Action</th>
 
-</table> 
-	<!-- <router-outlet></router-outlet> -->
+	</tr>
+	<tr>
+		<td>1</td>
+		<td>Alfreds Futterkiste</td>
+		<td>Maria Anders</td>
+		<td class='action'>
+			<mat-icon>edit</mat-icon>
+			<mat-icon>delete</mat-icon>
+		</td>
+	</tr>
+	<tr>
+		<td>1</td>
+		<td>Alfreds Futterkiste</td>
+		<td>Maria Anders</td>
+		<td class='action'>
+			<mat-icon>edit</mat-icon>
+			<mat-icon>delete</mat-icon>
+		</td>
+	</tr>
+</table>
+<!-- <router-outlet></router-outlet> -->
