--- a/src/app/modal/modal.component.less
+++ b/src/app/modal/modal.component.less
@@ -7,10 +7,11 @@ jw-modal {
     .jw-modal {
         /* modal container fixed across whole screen */
         position: fixed;
-        top: 1;
+        top: 50%;
         right: 0;
         bottom: 0;
-        left: 0;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
         /* z-index must be higher than .jw-modal-background */
         z-index: 1000;
@@ -20,10 +21,12 @@ jw-modal {
 
         .jw-modal-body {
             padding: 20px;
+            border-radius: 15px;
             background: #fff;
-
+            width: 200px;
+            
             /* margin exposes part of the modal background */
-            margin: 40px;
+           
         }
     }
 
