--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,62 @@
-.container-flex {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.container-modal{
+ display: flex;
+ width: 100%;
+ height: 100%;
+ position:absolute;
+ background: rgba(0, 0, 0, 0.2);
+ z-index: 1;
+ justify-content: center;
+ align-items: center;
 }
+.modal{
+ width: 300px;
+ height: 300px;
+ border-radius: 50px;
+ background-color: white;
+ display: flex;
+ flex-direction: column;
+}
+.main-modal{
+  display:flex;
+  margin:20px;
+  flex-direction: column;
+  flex:1;
+  align-items: center;
+  border: 1px solid red;
+}
+.modal-footer{
+  display:flex;
+  flex-direction: row;
+  height: 50px;
+}
+.modal-footer-left{
+flex:1;
+display:flex;
+justify-content: center;
+align-items: center;
+background-color: rgb(218, 104, 104);
+border-bottom-left-radius: 50px
+}
+.modal-footer-right{
+flex:1;
+display:flex;
+justify-content: center;
+align-items: center;
+background-color: rgb(0, 255, 85);
+border-bottom-right-radius: 50px
+}
+.container-not-modal{
+ display: flex;
+ flex-direction: column;
+ background-color: white;
+ height: 100%;
+ width: 100%;
+ position:absolute;
+}
+
 .container {
  width: 100%;
+ 
 }
 .container-title-footer {
  display: flex;
