--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 	<div class="container-modal">
     <div class="modal">
       <div class="main-modal">
-        
-        <p>a</p>
+        <div><p style="color:black;font-size:20px">Konfirmasi</p></div>
+        <div ><p style="color:black;font-size:16px; text-align: center;  line-height: 1.6;">Apakah anda akan <br> menghapus data ini</p></div>
       </div>
       <div class="modal-footer">
         <div class = "modal-footer-left">No</div>
