--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,11 +28,6 @@
 							<div>
 								No
 							</div>
-							<div class="header-action">
-								<mat-icon>arrow_drop_up</mat-icon>
-								<mat-icon>arrow_drop_down</mat-icon>
-
-							</div>
 
 						</th>
 						<th class="header" style="flex:2">
@@ -41,8 +36,8 @@
 							</div>
 
 							<div class="header-action">
-								<mat-icon>arrow_drop_up</mat-icon>
-								<mat-icon>arrow_drop_down</mat-icon>
+								<mat-icon (click)="sortAction(name,desc)">arrow_drop_up</mat-icon>
+								<mat-icon (click)="sortAction(name,asc)">arrow_drop_down</mat-icon>
 							</div>
 						</th>
 						<th class="header" style="flex:2">
@@ -51,8 +46,8 @@
 							</div>
 
 							<div class="header-action">
-								<mat-icon>arrow_drop_up</mat-icon>
-								<mat-icon>arrow_drop_down</mat-icon>
+								<mat-icon (click)="sortAction(birthDate,desc)">arrow_drop_up</mat-icon>
+								<mat-icon (click)="sortAction(birthDate,asc)">arrow_drop_down</mat-icon>
 							</div>
 						</th>
 						<th class="header" style="flex:2">
@@ -61,8 +56,8 @@
 							</div>
 
 							<div class="header-action">
-								<mat-icon>arrow_drop_up</mat-icon>
-								<mat-icon>arrow_drop_down</mat-icon>
+								<mat-icon (click)="sortAction(position,desc)">arrow_drop_up</mat-icon>
+								<mat-icon (click)="sortAction(position,asc)">arrow_drop_down</mat-icon>
 							</div>
 						</th>
 						<th class="header" style="flex:2">
@@ -71,8 +66,8 @@
 							</div>
 
 							<div class="header-action">
-								<mat-icon>arrow_drop_up</mat-icon>
-								<mat-icon>arrow_drop_down</mat-icon>
+								<mat-icon (click)="sortAction(idNumber,desc)">arrow_drop_up</mat-icon>
+								<mat-icon (click)="sortAction(idNumber,asc)">arrow_drop_down</mat-icon>
 							</div>
 						</th>
 						<th class="header" style="flex:2">
@@ -81,24 +76,16 @@
 							</div>
 
 							<div class="header-action">
-								<mat-icon>arrow_drop_up</mat-icon>
-								<mat-icon>arrow_drop_down</mat-icon>
+								<mat-icon (click)="sortAction(gender,desc)">arrow_drop_up</mat-icon>
+								<mat-icon (click)="sortAction(gender,asc)">arrow_drop_down</mat-icon>
 							</div>
 						</th>
 						<th class="header" style="flex:1">
 							<div>
 								Aksi
 							</div>
-
-							<div class="header-action">
-								<mat-icon>arrow_drop_up</mat-icon>
-								<mat-icon>arrow_drop_down</mat-icon>
-							</div>
 						</th>
 					</tr>
-
-
-
 
 					<tr class="tr-footer"  *ngFor="let item of employees;let i = index;">
 						<td class="footer" style="flex:1">{{i+1}}</td>
@@ -112,10 +99,7 @@
 							<mat-icon (click)="openModal('custom-modal-1')">delete</mat-icon>
 						</td>
 					</tr>
-         
-
-
-
+        
 				</table>
 
 			</div>
