--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -33,7 +33,8 @@ display:flex;
 justify-content: center;
 align-items: center;
 background-color: rgb(218, 104, 104);
-border-bottom-left-radius: 30px
+border-bottom-left-radius: 30px;
+cursor: pointer
 }
 .modal-footer-right{
 flex:1;
@@ -41,7 +42,8 @@ display:flex;
 justify-content: center;
 align-items: center;
 background-color: rgb(0, 255, 85);
-border-bottom-right-radius: 30px
+border-bottom-right-radius: 30px;
+cursor: pointer
 }
 .container-not-modal{
  display: flex;
