--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div>
-	<div class="container-modal">
+	<div class="container-modal" [ngClass]="setModal()">
     <div class="modal">
       <div class="main-modal">
         <div><p style="color:black;font-size:20px">Konfirmasi</p></div>
         <div ><p style="color:black;font-size:16px; text-align: center;  line-height: 1.6;">Apakah anda akan <br> menghapus data ini</p></div>
       </div>
       <div class="modal-footer">
-        <div class = "modal-footer-left">No</div>
-         <div class = "modal-footer-right">Yes</div>
+        <div class = "modal-footer-left" (click)="modalAction()">No</div>
+         <div class = "modal-footer-right" (click)="modalAction()">Yes</div>
       </div>
     </div>
   </div>
