--- a/src/app/employee/addEdit/addEdit.component.html
+++ b/src/app/employee/addEdit/addEdit.component.html
@@ -1,43 +1,73 @@
-<div class = "container-flex">
-<div class = "container">
-<div class = "name-field">
-  <div >
-    Nama
-  </div>
-  <div>
-   <input type="text" id="fname" name="firstname" placeholder="Your name..">
-  </div>
-</div>
-
-<div class = "name-field">
-  <div >
-    Tanggal Lahir
-  </div>
-  <div>
-   <input type="text" id="fname" name="firstname" placeholder="Your name..">
-  </div>
-</div>
-
-<div class = "name-field">
-  <div >
-    Jabatan
-  </div>
-  <div>
-   <input type="text" id="fname" name="firstname" placeholder="Your name..">
-  </div>
-</div>
-
-<div class = "name-field">
-  <div >
-    NIP
-  </div>
-  <div>
-   <input type="text" id="fname" name="firstname" placeholder="Your name..">
-  </div>
-</div>
-
-</div>
-
-
-
+<div class="container-flex">
+	<div class="container">
+		<div class="name-field">
+			<div class="left-field">
+				Nama
+			</div>
+			<div class="right-field">
+				<mat-form-field class="example-form-field">
+					<mat-label></mat-label>
+					<input matInput type="text" [(ngModel)]="value">
+				</mat-form-field>
+			</div>
+		</div>
+		<div class="name-field">
+			<div class="left-field">
+				Tanggal Lahir
+			</div>
+			<div class="right-field">
+				<mat-form-field color="accent" appearance="fill">
+					<mat-label></mat-label>
+					<input matInput [matDatepicker]="picker1" [(ngModel)]="name" >
+					<mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+					<mat-datepicker #picker1></mat-datepicker>
+				</mat-form-field>
+			</div>
+		</div>
+		<div class="name-field">
+			<div class="left-field">
+				Jabatan
+			</div>
+			<div class="right-field">
+				<mat-form-field appearance="fill">
+					<mat-label>==Pilih Jabatan==</mat-label>
+					<mat-select [(ngModel)]="selectedValue" name="food">
+						<mat-option *ngFor="let food of foods" [value]="food.value">
+							{{food.viewValue}}
+						</mat-option>
+					</mat-select>
+				</mat-form-field>
+			</div>
+		</div>
+		<div class="name-field">
+			<div class="left-field">
+				NIP
+			</div>
+			<div class="right-field">
+				<mat-form-field class="example-form-field">
+					<mat-label>Clearable input</mat-label>
+					<input matInput type="text" [(ngModel)]="value">
+				</mat-form-field>
+			</div>
+		</div>
+		<div class="name-field">
+			<div class="left-field">
+				Jenis Kelamin
+			</div>
+			<div class="right-field">
+				<mat-radio-group aria-label="Select an option">
+					<mat-radio-button style="margin-right:50%" value="1">Pria</mat-radio-button>
+					<mat-radio-button value="2">Wanita</mat-radio-button>
+				</mat-radio-group>
+			</div>
+		</div>
+		<div class="name-field" style="margin-top:50px">
+			<div class="left-field" style=" justify-content: flex-end;margin:10px">
+				<button  class="button-left" mat-raised-button color="primary" (click)="getEmployees()">Kembali</button>
+			</div>
+			<div class="right-field" style="margin:10px">
+				<button  class="button-left" mat-raised-button color="primary" (click)="getEmployees()">Simpan</button>
+			</div>
+		</div>
+	</div>
 </div>
