--- a/src/app/employee/addEdit/addEdit.component.css
+++ b/src/app/employee/addEdit/addEdit.component.css
@@ -26,7 +26,9 @@
 mat-form-field{
   width: 100%;
 }
-
+mat-error {
+  font-size: 12px
+}
 /* @media screen and (max-width: 1200px) {
 mat-form-field{
     width: 500px;
