--- a/src/app/employee/addEdit/addEdit.component.html
+++ b/src/app/employee/addEdit/addEdit.component.html
@@ -69,7 +69,7 @@
 		</div>
 		<div class="name-field" style="margin-top:50px">
 			<div class="left-field" style=" justify-content: flex-end;margin:10px">
-				<button  class="button-left" mat-raised-button color="primary" (click)="addEmployees()">Kembali</button>
+				<button  class="button-left" mat-raised-button color="primary" (click)="back()">Kembali</button>
 			</div>
 			<div class="right-field" style="margin:10px">
 				<button  class="button-left" mat-raised-button color="primary" (click)="addEmployees()"
