--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,6 +1,5 @@
 	<div class="container-table">
-				<button style = "margin-bottom:10px" mat-raised-button color="primary" (click)="getEmployees()">Tambah</button>
-        
+				<button style = "margin-bottom:10px" mat-raised-button color="primary" (click)="goAdd()">Tambah</button>
 				<table>
 
 					<tr class="tr-header">
